# FasterSLAM

./: .clang-format  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  test.txt
analysis/: backup_all_benchmarks.txt  cache_hits.md  generate_input.py  results.txt
doc/: Doxyfile
figs/: analysis.txt  plot_costly_functions.py
figs/gprof/v0/: analysis_DT_OBSERVE_EQ_1_DT_CONTROLS.txt
figs/gprof/v1/: analysis10K_1_1.txt  analysis10K_1_8.txt
figs/gprof/v2/: analysis10K_1v8_fast.txt  analysis1K_1v8_base.txt  analysis1K_1v8_fast.txt
git-hooks/: git-hooks_update.txt
hooks/: commit-msg  git-hooks_pre-commit-clang-format.txt  git-hooks_setup-hook.sh  git-hooks_update  pre-commit-clang-format  setup.sh  update
scripts/: clang-format-apply.sh  scripts_clang-format-and-fix-macros.sh  scripts_clang-format-apply.sh  scripts_clang-format-test.sh
src/: .gitlab-ci.yaml  CMakeLists.txt  benchmark.sh  results_cache.txt
src/CMakeModules/: CodeCoverage.cmake  TestCoverage.cmake
src/core/: CMakeLists.txt  KF_cholesky_update.cpp  KF_cholesky_update.h  KF_cholesky_update_v0.cpp  KF_cholesky_update_v0.h  KF_cholesky_update_v2.cpp  KF_cholesky_update_v2.h  TransformToGlobal.cpp  TransformToGlobal.h  add_control_noise.cpp  add_control_noise.h  add_feature.cpp  add_feature.h  add_observation_noise.cpp  add_observation_noise.h  alignment_utils.cpp  alignment_utils.h  compute_jacobians.cpp  compute_jacobians.h  compute_steering.cpp  compute_steering.h  compute_weight.cpp  compute_weight.h  compute_weight_and_feature_update.cpp  compute_weight_and_feature_update.h  configfile.cpp  configfile.h  data_associate_known.cpp  data_associate_known.h  example.cpp  example.hpp  fast_rand.h  fastrand.cpp  fastrand.h  feature_update.cpp  feature_update.h  flop_count.h  get_observations.cpp  get_observations.h  linalg.cpp  (+30 more)
src/core/benchmarks/: CMakeLists.txt  KF_cholesky_update_bench.cpp  add_control_noise_bench.cpp  add_feature_bench.cpp  add_observation_noise_bench.cpp  atan2_bench.cpp  batch_inverse_bench.cpp  compute_jacobians4_bench.cpp  compute_jacobians_avx_bench.cpp  compute_jacobians_bench.cpp  compute_steering_bench.cpp  compute_weight_and_feature_update_bench.cpp  compute_weight_bench.cpp  data_associate_known_bench.cpp  example_bench.cpp  feature_update_bench.cpp  get_observations_bench.cpp  mmT_2x2_bench.cpp  mm_2x2_bench.cpp  mmadd_2x2_bench.cpp  multivariate_gauss_bench.cpp  particle_bench.cpp  pi_to_pi_bench.cpp  predict_bench.cpp  predict_true_bench.cpp  random_bench.cpp  resample_particles_bench.cpp  rng_bench.cpp  stratified_random_bench.cpp  stratified_resample_bench.cpp  test_webmap.mat  trigonometry_bench.cpp  tscheb_normalized_sine_bench.cpp  tscheb_not_normalized_sine_bench.cpp  vTMv_2x2_bench.cpp
src/core/tests/: CMakeLists.txt  KF_cholesky_update_test.cpp  TransformToGlobal_test.cpp  VLA_contiguous_memory_test.cpp  add_control_noise_test.cpp  add_feature_test.cpp  add_observation_noise_test.cpp  compute_jacobians_test.cpp  compute_steering_test.cpp  compute_weight_test.cpp  configfile.c  configfile.h  data_associate_known_test.cpp  example_test.cpp  feature_update_test.cpp  get_observations_test.cpp  linalg_test.cpp  lm.txt  multivariate_gauss_test.cpp  particle_test.cpp  pi_to_pi_test.cpp  predict_test.cpp  predict_true_test.cpp  read_input_file_test.cpp  resample_particles_test.cpp  stratified_random_test.cpp  stratified_resample_test.cpp  transform_to_global.cpp  trigonometry_test.cpp  tscheb_sine_test.cpp
src/fastslam1/: CMakeLists.txt  cache_analysis.txt  fastslam1.cpp  fastslam1_sim.cpp  fastslam1_sim.h  fastslam1_utils.cpp  fastslam1_utils.h  main.cpp  main_VP.cpp  observe_update.cpp  observe_update.h  placeholder  predict_update.cpp  predict_update.h
src/fastslam1/benchmarks/: CMakeLists.txt  fastslam1_scale_Nf_bench.cpp  fastslam1_sim_VP_bench.cpp  fastslam1_sim_bench.cpp  observe_update_bench.cpp  observe_update_feature_bench.cpp  predict_update_VP_bench.cpp  predict_update_bench.cpp
src/fastslam1/tests/: CMakeLists.txt  example2_test.cpp  example_test.cpp  full_test.cpp  test_webmap.mat
src/input_data/: example_webmap_1.mat  example_webmap_5.mat  example_webmap_500.mat  gps.csv  input_1.txt  input_2.txt  input_3.txt  input_lm_3701_wp_500.txt  main.m
src/microbenchmarks/: CMakeLists.txt  VLA_vs_malloc_bench.cpp  main.cpp  pi_to_pi_bench.cpp
src/output/: CMakeLists.txt  converters.h  estimate_json.cpp  estimate_json.h  flop_estimates.cpp  ground_truth_json.cpp  ground_truth_json.h  visualize.cpp  visualize_VP.cpp
src/output/tests/: CMakeLists.txt
src/utils/: CMakeLists.txt  rdtsc_benchmark.h  read_input_file.cpp  read_input_file.h  string_format.cpp  string_format.h
src/utils/benchmarklib/: rdtsc_benchmark.h  tsc_x86.h
visualization/: Pipfile  benchmark.csv  benchmark_graphs.py  benchmark_graphs_styled_see_other_file.py  benchmark_sample.csv  benchmark_sample_new.csv  create_video.py  fastslam1_feature.csv  fastslam1_particle.csv  fastslam_sim_bokeh.ipynb  fastslam_sim_bokeh.py  linalg_perf.eps  observe_opt_particles.eps  observe_subfunctions.eps  performance_plots.py  predict_opt_particles.eps  predict_subfunctions.eps  resampling.eps  roofline_plots.py  roofline_plots_all.py  runtime.eps  scale_features.eps  scaling_roofline.eps  sin_approximation.eps  sine_speedup.eps
visualization/polybox/: benchmark.csv  benchmark_cleaned.csv  benchmark_fastslam1.csv  fastslam1_VP_particle.csv  fastslam1_feature copy.csv  fastslam1_feature.csv  fastslam1_particle.csv  observe_update_scale_features.csv  observe_update_scale_particles.csv  predict_update_VP_scale_particles.csv  predict_update_scale_particles.csv  resample_particles_scale_particles.csv  sin_benchmark.csv  trigonometry_benchmark.csv  tscheb_angles.csv
